# jobScrapper

./: jobs.csv  main.py  pyproject.toml  ro.py  save.py  so.py  wewr.py
templates/: home.html  report.html
